# esp-hal-template

./: Cargo.toml  Makefile  generate.sh
.cargo/: config.toml
